--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="card_view_margin_bottom">50dp</dimen>
+    <dimen name="card_view_width">80dp</dimen>
+    <dimen name="card_view_height">70dp</dimen>
+    <dimen name="card_view_corner">8dp</dimen>
+    <dimen name="recycleview_stage_margin_left">50dp</dimen>
+    <dimen name="recycleview_stage_margin_right">50dp</dimen>
+    <dimen name="recycleview_stage_margin_top">100dp</dimen>
+    <dimen name="recycleview_stage_margin_bottom">80dp</dimen>
 </resources>
