--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,14 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="ApplicationTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/theme_primary_light</item>
+        <item name="colorPrimaryDark">@color/theme_primary_dark</item>
+        <item name="colorAccent">@color/theme_primary_accent</item>
+        <item name="android:windowBackground">@color/theme_window_background</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:textIsSelectable">false</item>
+        <item name="android:screenOrientation">landscape</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
 </resources>
