--- a/app/src/main/res/layout/cardview_stage.xml
+++ b/app/src/main/res/layout/cardview_stage.xml
@@ -29,7 +29,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:scaleType="centerInside"
-            android:src="@drawable/action_word" />
+            android:src="@drawable/ic_action_word" />
         <TextView
             android:id="@+id/textview_time_complete"
             android:layout_width="match_parent"
