--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="recycleview_stage_margin_right">50dp</dimen>
     <dimen name="recycleview_stage_margin_top">100dp</dimen>
     <dimen name="recycleview_stage_margin_bottom">80dp</dimen>
+    <dimen name="button_grid_puzzle_size">50dp</dimen>
 </resources>
