--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,21 +6,23 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:background="@drawable/kid_cartoon_banner"
     android:orientation="horizontal">
-    <LinearLayout
+    <TextView
         android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_weight="0.5"
         android:layout_height="match_parent">
-    </LinearLayout>
+    </TextView>
     <GridView
-        android:id="@+id/gridview_puzzle"
-        android:layout_width="0dp"
-        android:layout_weight="4"
         android:layout_height="match_parent"
-        android:horizontalSpacing="2dp"
-        android:verticalSpacing="2dp"></GridView>
-    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="5"
+        android:id="@+id/gridview_puzzle"></GridView>
+    <GridView
+        android:id="@+id/gridview2_puzzle"
+        android:layout_width="0dp"
+        android:layout_weight="2"
+        android:layout_height="match_parent"></GridView>
+    <TextView
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"></LinearLayout>
-
+        android:layout_weight="0.5"></TextView>
 </LinearLayout>
