add Animation for gridview item,drag drop button to grid view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,23 +6,204 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:background="@drawable/kid_cartoon_banner"
     android:orientation="horizontal">
-    <TextView
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="0.5"
-        android:layout_height="match_parent">
-    </TextView>
-    <GridView
+        android:layout_weight="1"
         android:layout_height="match_parent"
-        android:layout_width="0dp"
-        android:layout_weight="5"
-        android:id="@+id/gridview_puzzle"></GridView>
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/bt_answer_A"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="A"/>
+            <Button
+                android:id="@+id/bt_answer_B"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="B"/>
+            <Button
+                android:id="@+id/bt_answer_C"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="C"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/bt_answer_D"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="D"/>
+            <Button
+                android:id="@+id/bt_answer_E"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="E"/>
+            <Button
+                android:id="@+id/bt_answer_F"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="F"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/bt_answer_G"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="G"/>
+            <Button
+                android:id="@+id/bt_answer_H"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="H"/>
+            <Button
+                android:id="@+id/bt_answer_I"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="I"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/bt_answer_J"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="J"/>
+            <Button
+                android:id="@+id/bt_answer_K"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="K"/>
+            <Button
+                android:id="@+id/bt_answer_L"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="L"/>
+        </LinearLayout>
+    </LinearLayout>
     <GridView
-        android:id="@+id/gridview2_puzzle"
+        android:id="@+id/gridview_puzzle"
         android:layout_width="0dp"
         android:layout_weight="2"
-        android:layout_height="match_parent"></GridView>
-    <TextView
+        android:layout_height="match_parent"
+        android:horizontalSpacing="2dp"
+        android:verticalSpacing="2dp"></GridView>
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.5"></TextView>
+        android:layout_weight="1"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/bt_answer_M"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="M"/>
+            <Button
+                android:id="@+id/bt_answer_N"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="N"/>
+            <Button
+                android:id="@+id/bt_answer_O"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="O"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/bt_answer_P"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="P"/>
+            <Button
+                android:id="@+id/bt_answer_Q"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="Q"/>
+            <Button
+                android:id="@+id/bt_answer_R"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="R"/>
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/bt_answer_S"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="S"/>
+            <Button
+                android:id="@+id/bt_answer_T"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="T"/>
+            <Button
+                android:id="@+id/bt_answer_U"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="U"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/bt_answer_V"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="V"/>
+            <Button
+                android:id="@+id/bt_answer_W"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="W"/>
+            <Button
+                android:id="@+id/bt_answer_X"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="X"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/bt_answer_Y"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="Y"/>
+            <Button
+                android:id="@+id/bt_answer_Z"
+                android:layout_width="@dimen/button_answer_size"
+                android:layout_height="@dimen/button_answer_size"
+                android:text="Z"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
 </LinearLayout>
