--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,6 @@
     <dimen name="recycleview_stage_margin_bottom">80dp</dimen>
     <dimen name="button_grid_puzzle_size">30dp</dimen>
     <dimen name="button_answer_size">40dp</dimen>
+    <dimen name="button_level_size">60dp</dimen>
+    <dimen name="text_size">10sp</dimen>
 </resources>
