--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,17 +19,20 @@
                 android:id="@+id/bt_answer_A"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="A"/>
+                android:text="A"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_B"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="B"/>
+                android:text="B"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_C"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="C"/>
+                android:text="C"
+                style="@style/YellowButton"/>
 
         </LinearLayout>
         <LinearLayout
@@ -40,17 +43,20 @@
                 android:id="@+id/bt_answer_D"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="D"/>
+                android:text="D"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_E"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="E"/>
+                android:text="E"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_F"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="F"/>
+                android:text="F"
+                style="@style/YellowButton"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,17 +66,20 @@
                 android:id="@+id/bt_answer_G"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="G"/>
+                android:text="G"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_H"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="H"/>
+                android:text="H"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_I"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="I"/>
+                android:text="I"
+                style="@style/YellowButton"/>
 
         </LinearLayout>
         <LinearLayout
@@ -81,17 +90,20 @@
                 android:id="@+id/bt_answer_J"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="J"/>
+                android:text="J"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_K"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="K"/>
+                android:text="K"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_L"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="L"/>
+                android:text="L"
+                style="@style/YellowButton"/>
         </LinearLayout>
     </LinearLayout>
     <GridView
@@ -114,17 +126,20 @@
                 android:id="@+id/bt_answer_M"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="M"/>
+                android:text="M"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_N"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="N"/>
+                android:text="N"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_O"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="O"/>
+                android:text="O"
+                style="@style/YellowButton"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -134,19 +149,20 @@
                 android:id="@+id/bt_answer_P"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="P"/>
+                android:text="P"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_Q"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="Q"/>
+                android:text="Q"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_R"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="R"/>
-
-
+                android:text="R"
+                style="@style/YellowButton"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -156,17 +172,20 @@
                 android:id="@+id/bt_answer_S"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="S"/>
+                android:text="S"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_T"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="T"/>
+                android:text="T"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_U"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="U"/>
+                android:text="U"
+                style="@style/YellowButton"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -176,17 +195,20 @@
                 android:id="@+id/bt_answer_V"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="V"/>
+                android:text="V"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_W"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="W"/>
+                android:text="W"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_X"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="X"/>
+                android:text="X"
+                style="@style/YellowButton"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -196,19 +218,21 @@
                 android:id="@+id/bt_answer_Y"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="Y"/>
+                android:text="Y"
+                style="@style/YellowButton"/>
             <Button
                 android:id="@+id/bt_answer_Z"
                 android:layout_width="@dimen/button_answer_size"
                 android:layout_height="@dimen/button_answer_size"
-                android:text="Z"/>
+                android:text="Z"
+                style="@style/YellowButton"/>
         </LinearLayout>
-        <Button
+        <!--<Button
             android:id="@+id/btCheckAnswer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            android:text="Check Answer"/>
+            android:text="Check Answer"/>-->
 
     </LinearLayout>
 
