--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,8 @@
     <dimen name="button_answer_size">30dp</dimen>
     <dimen name="button_level_size">60dp</dimen>
     <dimen name="text_size">10sp</dimen>
+    <dimen name="gridview_margin_top">20dp</dimen>
+    <dimen name="bt_level_margin_bottom">20dp</dimen>
+    <dimen name="bt_level_margin_left">15dp</dimen>
+    <dimen name="bt_level_margin_right">15dp</dimen>
 </resources>
