--- a/app/src/main/res/layout/home_activity_layout.xml
+++ b/app/src/main/res/layout/home_activity_layout.xml
@@ -2,7 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/happi_spell_background">
+    android:background="@drawable/main_menu_background">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/happi_spell_logo"
+        android:src="@drawable/game_logo_en"
+        android:layout_centerHorizontal="true"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
