--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="bt_level_margin_bottom">20dp</dimen>
     <dimen name="bt_level_margin_left">15dp</dimen>
     <dimen name="bt_level_margin_right">15dp</dimen>
+    <dimen name="happi_spell_logo">80dp</dimen>
 </resources>
