--- a/app/src/main/res/layout/cardview_stage.xml
+++ b/app/src/main/res/layout/cardview_stage.xml
@@ -20,20 +20,24 @@
         <TextView
             android:id="@+id/textviewStage"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="10dp"
             android:gravity="center_horizontal"
             android:maxLines="2"
+            android:textSize="7sp"
             android:text="Action Word" />
         <ImageView
             android:id="@+id/image_level"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="@dimen/card_view_width"
+            android:layout_height="@dimen/img_height"
             android:scaleType="centerInside"
             android:src="@drawable/ic_action_word" />
         <TextView
             android:id="@+id/textview_time_complete"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="10dp"
+            android:textSize="7sp"
+            android:textColor="@android:color/white"
+            android:background="@color/red"
             android:gravity="center"
             android:text="0m0s" />
     </LinearLayout>
