27/6 -Fix Layout (need test on != size screens) -Now we can not click on gird cell that does NOT contain words.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,8 +111,9 @@
         android:layout_width="0dp"
         android:layout_weight="3"
         android:layout_height="match_parent"
-        android:horizontalSpacing="1dp"
-        android:verticalSpacing="1dp"></GridView>
+        android:horizontalSpacing="0dp"
+        android:verticalSpacing="0dp"
+        android:gravity="center"></GridView>
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
