--- a/app/src/main/res/layout/grid_puzzle_item.xml
+++ b/app/src/main/res/layout/grid_puzzle_item.xml
@@ -11,11 +11,11 @@
     <Button
         android:id="@+id/button"
         android:layout_gravity="center"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="15dp"
         style="@style/BlueButton"
-        android:layout_margin="1dp"/>
+        android:layout_margin="0dp"/>
     <TextView
         android:id="@+id/tvItemSTT"
         android:layout_width="wrap_content"
