--- a/app/src/main/res/layout/dialog_next_level.xml
+++ b/app/src/main/res/layout/dialog_next_level.xml
@@ -8,19 +8,17 @@
         android:id="@+id/buttonLevel"
         android:layout_width="@dimen/button_level_size"
         android:layout_height="@dimen/button_level_size"
-        android:text="Level"
         android:textSize="@dimen/text_size"
+        android:background="@drawable/home_icon"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/btn_yellow_cell"
         android:layout_marginBottom="@dimen/bt_level_margin_bottom"
         android:layout_marginLeft="@dimen/bt_level_margin_left"/>
     <Button
         android:id="@+id/buttonNextLevel"
         android:layout_width="@dimen/button_level_size"
         android:layout_height="@dimen/button_level_size"
-        android:text="Next"
         android:textSize="@dimen/text_size"
-        android:background="@drawable/btn_yellow_cell"
+        android:background="@drawable/next_yellow"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="@dimen/bt_level_margin_bottom"
