--- a/app/src/main/res/layout/home_activity_layout.xml
+++ b/app/src/main/res/layout/home_activity_layout.xml
@@ -21,5 +21,19 @@
             android:layout_height="wrap_content">
         </android.support.v7.widget.RecyclerView>
     </LinearLayout>
+    <ImageView
+        android:id="@+id/ic_volume_start"
+        android:layout_width="@dimen/button_sound_size"
+        android:layout_height="@dimen/button_sound_size"
+        android:src="@drawable/ic_volume_up_white_48pt"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"/>
+    <ImageView
+        android:id="@+id/ic_info_start"
+        android:layout_width="@dimen/button_sound_size"
+        android:layout_height="@dimen/button_sound_size"
+        android:layout_marginLeft="@dimen/button_sound_size"
+        android:src="@drawable/ic_info_white_48pt"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
